[tool.poetry]
name = "frontbot JasonBot"
version = "0.0.1"
description = "Front Bot for Jasonbot.ru"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.19"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
aiogram = "3.0.0b8"
loguru = "^0.7.0"
alembic = "^1.11.1"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
